--- a/vercel.json
+++ b/vercel.json
@@ -7,9 +7,13 @@
 }
 ],
 "routes": [
-{
-"src": "/(.*)",
-"dest": "main.py"
-}
-]
+    {
+      "src": "/docs",
+      "dest": "main.py"
+    },
+    {
+      "src": "/docs/(.*)",
+      "dest": "main.py"
+    }
+  ]
 }
