--- a/vercel.json
+++ b/vercel.json
@@ -7,13 +7,9 @@
 }
 ],
 "routes": [
-    {
-      "src": "/docs",
-      "dest": "main.py"
-    },
-    {
-      "src": "/docs/(.*)",
-      "dest": "main.py"
-    }
-  ]
+{
+"src": "/(.*)",
+"dest": "main.py"
+}
+]
 }
