--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,16 @@
 {
-"version": 2,
-"builds": [
-{
-"src": "main.py",
-"use": "@vercel/python"
+  "version": 2,
+  "builds": [
+    {
+      "src": "main.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "api/index.py"
+    }
+  ]
 }
-],
-"routes": [
-{
-"src": "/(.*)",
-"dest": "main.py"
-}
-]
-}
+
